boompow2/server/kubernetes/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: boompow-ingress
  namespace: mosquitto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "broker-internal"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/upstream-hash-by: $remote_addr
spec:
  tls:
  - hosts:
    - bpow.banano.cc
    secretName: bpow-banano-cc-new-server-secret
  rules:
  - host: bpow.banano.cc
    http:
      paths:
      - path: /mqtt
        backend:
          serviceName: broker-internal
          servicePort: 9001
